--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws-messaging:2.2.6.RELEASE'
 	implementation("org.springframework.cloud:spring-cloud-aws-autoconfigure:2.2.6.RELEASE")
+
+	implementation 'org.modelmapper:modelmapper:3.2.0'
+	implementation("net.logstash.logback:logstash-logback-encoder:8.0")
+
 	//	implementation 'org.springframework.cloud:spring-cloud-starter-aws-parameter-store-config'
 
 	// S3 AWS SDK
