--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// Spring Cloud AWS
 	implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.2.1')
@@ -42,7 +43,6 @@ dependencies {
 	implementation 'com.amazonaws:aws-java-sdk-sns:1.12.196'
 
 
-
 	// ModelMapper
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 
@@ -50,7 +50,7 @@ dependencies {
 	implementation 'net.logstash.logback:logstash-logback-encoder:8.0'
 
 	// Swagger for API documentation
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok:1.18.36'
