--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation("org.springframework.boot:spring-boot-starter-security:3.4.2")
+
+	// JJWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
+	implementation 'com.google.code.gson:gson:2.12.1'
+
 
 	// Spring Cloud AWS
 	implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.2.1')
