--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.json:json:20231013'
+	implementation 'com.auth0:java-jwt:3.15.0'
 
 	// Spring Cloud AWS
 	implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.2.1')
