implementando testes unitários

--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,12 @@ dependencies {
 	implementation 'org.postgresql:postgresql'
 
 	// Test Dependencies
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+	testImplementation 'org.mockito:mockito-core:5.7.0'
+	testImplementation 'org.mockito:mockito-inline:5.2.0'
+	testImplementation 'org.assertj:assertj-core:3.24.2'
+	testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
+	testImplementation 'org.testcontainers:localstack:1.19.3'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
