--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.2'
 	id 'io.spring.dependency-management' version '1.1.7'
-	id 'jacoco'
+	id 'org.sonarqube' version '6.0.1.5171'
 }
 
 group = 'com.message'
@@ -22,7 +22,7 @@ ext {
 	set('springCloudVersion', "2024.0.0")
 	sonarOrganization = "frame-flow"
 	sonarProjectKey = "upload_frame_flow"
-	sonarHostUrl = "https://sonarcloud.io"
+	sonarHostUrl = "https://sonarcloud.io/"
 }
 
 dependencyManagement {
@@ -85,26 +85,16 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+sonarqube {
+	properties {
+		property "sonar.login", "<token>"
+		property "sonar.exclusions",
+				"**/core/**/," +
+						"**/api/**/," +
+						"**/configuration/**/"
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
-	finalizedBy 'jacocoTestReport'
-}
-
-jacoco {
-	toolVersion = "0.8.12"
-}
-
-jacocoTestReport {
-	dependsOn test
-	reports {
-		xml.required = true
-		csv.required = false
-		html.outputLocation = layout.buildDirectory.dir("jacocoHtml")
-	}
-}
-
-tasks.register("sonar") {
-	doLast {
-		println "SonarCloud Analysis: ${sonarHostUrl}/dashboard?id=${sonarProjectKey}"
-	}
 }
