Corrigindo injeção de dependencias

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.4.2'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'org.sonarqube' version '6.0.1.5171'
+	id 'jacoco'
 }
 
 group = 'com.message'
@@ -99,4 +100,13 @@ sonarqube {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+}
+
+tasks.named('jacocoTestReport') {
+	reports {
+		xml.required = true
+		html.required = true
+		csv.required = true
+	}
 }
