--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,7 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
@@ -23,7 +22,6 @@ jobs:
   unit-test:
     runs-on: ubuntu-latest
     needs: build
-
     steps:
       - uses: actions/checkout@v4
         with:
@@ -34,19 +32,19 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: gradle
-      - name: Run Tests
-        run: ./gradlew test --no-daemon
+      - name: Run Tests and Generate Coverage Report
+        run: ./gradlew test jacocoTestReport --no-daemon
 
       - name: Generate JaCoCo Badge
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2.0.1
         with:
-          jacoco-report-path: build/reports/jacoco/test/jacocoTestReport.xml
+          jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv # Corrigido
 
       - name: Log coverage percentage
         run: |
           echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
-          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"    
+          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
 
       - name: Upload JaCoCo coverage report
         uses: actions/upload-artifact@v4
@@ -57,7 +55,6 @@ jobs:
   code-analysis:
     runs-on: ubuntu-latest
     needs: unit-test
-
     steps:
       - uses: actions/checkout@v4
         with:
