--- a/.github/workflows/deploy-eks.yaml
+++ b/.github/workflows/deploy-eks.yaml
@@ -2,7 +2,7 @@ name: Deploy AWS Academy - EKS
 
 on:
   workflow_run:
-    workflows: ["Java CI with Maven"]
+    workflows: ["Java CI with Gradle"]
     types:
       - completed
 
