--- a/.github/workflows/deploy-eks.yaml
+++ b/.github/workflows/deploy-eks.yaml
@@ -32,13 +32,13 @@ jobs:
       - name: Package & Tag
         run: | 
           docker compose -f Docker/docker-compose.yml build web --no-cache
-          docker tag upload-frame-flow:latest 026059231813.dkr.ecr.us-east-1.amazonaws.com/frameflow/frameflow-ecr:latest
+          docker tag upload-frame-flow:latest 090111931170.dkr.ecr.us-east-1.amazonaws.com/frameflow-ecr:latest
           docker ps
 
       - name: Push to ECR
         run: |
-          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 026059231813.dkr.ecr.us-east-1.amazonaws.com/frameflow/
-          docker push 026059231813.dkr.ecr.us-east-1.amazonaws.com/frameflow/frameflow-ecr:latest
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 090111931170.dkr.ecr.us-east-1.amazonaws.com
+          docker push 090111931170.dkr.ecr.us-east-1.amazonaws.com/frameflow-ecr:latest
 
       - name: Kube Secrets
         if: ${{ github.ref_name == 'master' }} && github.event_name == 'push'
