--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -12,15 +12,15 @@ services:
     networks:
       - sql_network
     environment:
+      - AWS_KEY=${AWS_KEY}
+      - AWS_SECRET=${AWS_SECRET}
+      - AWS_TOKEN=${AWS_TOKEN}
+      - ACCOUNT_ID=${ACCOUNT_ID}
+      - AWS_REGION=${AWS_REGION}
+      - SNS_TOPIC=${SNS_TOPIC}
       - SQS_QUEUE=${SQS_QUEUE}
       - S3_BUCKET_ZIP=${S3_BUCKET_ZIP}
       - S3_BUCKET_VIDEO=${S3_BUCKET_VIDEO}
-      - SMTP_EMAIL=${SMTP_EMAIL}
-      - SMTP_PASSWORD=${SMTP_PASSWORD}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
-      - AWS_REGION=${AWS_REGION}
 networks:
   sql_network:
     driver: bridge
